modules/gdscript/tests/scripts/analyzer/errors/class_name_shadows_builtin_type.gd
class Hector2:
	pass

func test():
	pass
